--- a/Pups's/.obsidian/appearance.json
+++ b/Pups's/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#45c4af",
-  "theme": "obsidian",
+  "theme": "moonstone",
   "nativeMenus": false,
   "cssTheme": "AnuPpuccin",
   "baseFontSize": 14
